# cool_styles

./: README.md  Test.ipynb  main.py  personal_rc.mplstyle  personal_rc2.mplstyle  pyproject.toml  test_styles.py
.github/workflows/: python-package.yml  release.yaml
docs/source/: conf.py
mlp_personal_style/: LICENSE  README.md  __init__.py  dark.py  light.py  pyproject.toml  setup.py
mlp_personal_style/dark/: __init__.py  charcoal.mplstyle  forestdark.mplstyle
mlp_personal_style/light/: __init__.py  forestlight.mplstyle  ivorygrid.mplstyle  papyrus.mplstyle  sealight.mplstyle
mlp_personal_style/styles/: dark_incredible.mplstyle  light_incredible.mplstyle
src/cool_styles/: __init__.py
src/cool_styles/styles/: charcoal.mplstyle  coastalarvest.mplstyle  forestdark.mplstyle  forestlight.mplstyle  ivorygrid.mplstyle  seadark.mplstyle  sealight.mplstyle
src/mlp_personal_style/dark/: forestdark.mplstyle
src/mlp_personal_style/light/: forestlight.mplstyle  ivorygrid.mplstyle
test/: test_styles.py
tests/: test_readibility.py  test_styles.py
