[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp_personal_style"
version = "0.1.0"
description = "Simple matplotlib styles with direct style imports"
authors = [
    {name = "GiuseppeMinardi", email = "author@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.3.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mlp_personal_style"
"Bug Tracker" = "https://github.com/yourusername/mlp_personal_style/issues"

[tool.setuptools]
packages = ["mlp_personal_style"]
include-package-data = true

[tool.setuptools.package-data]
"mlp_personal_style.styles" = ["*.mplstyle"]